# software-training

./: .gitignore  README.md  Syllabus.md  debug_tools.md  todo.md
.github/workflows/: ci.yml
Week 1/: README.md
Week 1/lecture_material/: linux_intro.md  using_git.md
Week 2/: READMEmd
Week 2/code/include/: proper_structure.hpp
Week 2/code/src/: inheritance.cpp  proper_structure.cpp  references.cpp
Week 2/lecture_material/: class_structure.md  cpp_basics.md  inheritance.md  references.md
Week 3/: README.md
Week 3/lecture_material/: nodes_and_messages.md  project.md  ros_cli.md
Week 4/: README.md
Week 4/lecture_material/: CMake_Intro.md  Code_Guide.md  DevOps.md  Launching_Nodes.md
cmake/: default_settings.cmake
controller_project/joystick_msgs/: CMakeLists.txt  package.xml
controller_project/joystick_package/: CMakeLists.txt  package.xml
controller_project/joystick_package/include/: joystick_driver.hpp
controller_project/joystick_package/launch/: joystick.launch.py
controller_project/joystick_package/src/: joystick_driver.cpp
controller_project/joystick_package/test/launch_tests/: joystick_driver_test.py
documents/installation/: docker.md  setup.sh
localization/src/: particle_filter_localizer.cpp  sensor_model.hpp
projects/week_1/: Instructions.md
projects/week_10/: Instructions.md
projects/week_2/: Instructions.md
projects/week_3/: Instructions.md
projects/week_4/: Instructions.md
projects/week_5/: Instructions.md
projects/week_6/: Instructions.md
projects/week_7/: Instructions.md
projects/week_8/: Instructions.md
projects/week_9/: Instructions.md
reference_solutions/localization/src/: odometry_sensor_model.cpp
rj_training_bringup/launch/projects/: week_3.launch.xml
setup_instructons/: docker.md  readme.md  setup.sh  wsl.md
turtlesim_project/src/keyboard/: package.xml  setup.py
turtlesim_project/src/keyboard/keyboard/: listen.py
turtlesim_project/src/teleop/: CMakeLists.txt  package.xml
turtlesim_project/src/teleop/include/: key_to_twist.hpp
turtlesim_project/src/teleop/include/teleop/: key_to_twist.hpp
turtlesim_project/src/teleop/src/: key_to_twist.cpp  keyboard_publisher.cpp
turtlesim_project/src/turtlesim_msgs/: CMakeLists.txt  package.xml
turtlesim_project/src/turtlesim_teleop/: CMakeLists.txt
